--- a/pom.xml
+++ b/pom.xml
@@ -72,10 +72,18 @@
             <artifactId>aspectjrt</artifactId>
             <version>1.9.1</version>
         </dependency>
+
         <dependency>
             <groupId>org.aspectj</groupId>
             <artifactId>aspectjweaver</artifactId>
             <version>1.9.1</version>
+        </dependency>
+
+        <!-- excel 引用包 -->
+        <dependency>
+            　　 <groupId>net.sourceforge.jexcelapi</groupId>
+            <artifactId>jxl</artifactId>
+            <version>2.6.12</version>
         </dependency>
 
 
